--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Monsters Show Page</h1>
-    The <%=monster.name%> from <%=monster.location%>. <%=monster.story%> is coming for you.
+    <%=monster.name%> from <%=monster.location%>. <%=monster.story%> 
 
     <nav>
         <a href="/monsters">Back to Monster Index</a>
