--- a/public/style.css
+++ b/public/style.css
@@ -1,27 +1,34 @@
 * {
   font-family: "Roboto", sans-serif;
+  background-color: black;
 }
 body {
-  background-color: black;
   text-align: center;
   color: white;
+  max-width: 80vw;
 }
+
 ul {
   list-style-type: none;
 }
 input {
   background-color: black;
   color: white;
+  margin: 1em;
 }
 a {
   color: white;
   text-decoration: none;
 }
 section {
-  padding-top: 3em;
-  padding-bottom: 4em;
+  padding-top: 2em;
+  padding-bottom: 3em;
 }
 
 nav {
   padding-bottom: 5em;
+}
+
+img {
+  max-width: 20vw;
 }
