--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,7 @@
                     <%=monster[i].name%>
                 </a></h2>
 
+              <img src="/image/question.png" alt="">
                 <p>Location: <%=monster[i].location%></p>
         <p>Story: <%=monster[i].story%></p>
 
