--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -21,7 +21,7 @@
       <input type="text" name="location" value="<%=monster.location%>" /><br />
       Story:
       <input type="text" name="story" value="<%=monster.story%>" /><br /><br />
-      <input type="submit" name="" value="Submit Changes" />
+      <input class="btn" type="submit" name="" value="Submit Changes" />
     </form>
   </body>
 </html>
