--- a/views/show.ejs
+++ b/views/show.ejs
@@ -19,7 +19,7 @@
     coming for you.
 
     <nav>
-      <a href="/monsters">~: Back to Monster Index :~</a>
+      <a href="/monsters" class="btn">~: Back to Monster Index :~</a>
     </nav>
   </body>
 </html>
