--- a/views/new.ejs
+++ b/views/new.ejs
@@ -19,7 +19,7 @@
       Name: <input type="text" name="name" /><br />
       Location: <input type="text" name="location" /><br />
       Story: <input type="text" name="story" /><br />
-      <input type="submit" value="Create Monster" />
+      <input class="btn" type="submit" value="Create Monster" />
     </form>
   </body>
 </html>
